--- a/FLASK_APP/templates/signin.html
+++ b/FLASK_APP/templates/signin.html
@@ -70,7 +70,7 @@
 
     <body>
         <div class="scroll-up-btn">
-            <i class="fas fa-angle-up"></i>
+            <i class="fa-sharp fa-regular fa-arrow-up"></i>
         </div>
         <nav class="navbar">
             <div class="max-width">
@@ -106,5 +106,10 @@
                 </div>
             </div>
         </section>
+
+         <!-- footer section start -->
+         <footer>
+            <span>Tapiwanashe Makani <a href="#">N0189434W</a></span>
+        </footer>
     </body>
 </html>
